--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,10 +2,8 @@
     <div class="row">
         <div class="col-md-4 push-md-4 login-page-content">
             <br>
-            <img src="assets/images/logo.png" height="40px" />
-            <h1 hidden>¿Donde estaciono?</h1>
-            <br>
-            <br>
+            <img src="assets/images/logo2.png" width="150px" />
+            <h1 >¿Donde estaciono?</h1>
             <form role="form" name="login-form" #f="ngForm" novalidate>
                 <div class="form-content">
                     <div class="form-group" [ngClass]="{'has-danger': f.submitted && !email.valid}">
