--- a/src/app/layout/notific-ingresados/notific-ingresados.component.html
+++ b/src/app/layout/notific-ingresados/notific-ingresados.component.html
@@ -1,7 +1,9 @@
 <app-page-header [heading]="'Notificar a Usuarios'" [icon]="'fa-bell'"></app-page-header>
 <div [@routerTransition] id="mytable">
     <div class="progress" *ngIf="ocultarTabla">
-        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+        <div class="progress-bar progress-bar-striped active"
+             role="progressbar" aria-valuenow="100" aria-valuemin="0"
+             aria-valuemax="100" style="width: 100%">
             <span>Cargando<span class="dotdotdot"></span></span>
         </div>
     </div>
@@ -13,7 +15,8 @@
     <!-- Este es el modal, queda croto el codigo embebido, si se puede refactorizar como subcomponente -->
     <app-notif-dialog [parque_id]="parque.idEstacionamiento" [emails_list]="emailAddresses"></app-notif-dialog>
 
-    <table datatable class="row-border hover table" id="table" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" [hidden]="ocultarTabla">
+    <table datatable class="row-border hover table" id="table"
+           [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" [hidden]="ocultarTabla">
         <thead class="inverse-custom">
         <tr>
             <th>#</th>
