--- a/src/app/layout/reporte-1/reporte-1.component.html
+++ b/src/app/layout/reporte-1/reporte-1.component.html
@@ -10,17 +10,16 @@
     <div class="col-md-3">
         <label class="control-label">Desde</label>
         <form class="form-inline mb-3">
-            <my-date-picker name="mydateDesde" [options]="myDatePickerOptionsDesde"
-                            (dateChanged) ="onChangeDesde()"
-                            [(ngModel)]="modelDesde" required></my-date-picker>
+            <my-date-picker name="mydateDesde" [(ngModel)]="modelDesde" [options]="myDatePickerOptionsDesde"
+                             (dateChanged) ="onChangeDesde($event)" required></my-date-picker>
         </form>
     </div>
     <div class="col-md-3">
         <label class="control-label">Hasta</label>
         <form class="form-inline mb-3">
-            <my-date-picker name="mydateHasta" [options]="myDatePickerOptionsHasta"
-                            (dateChanged) ="onChangeHasta()"
-                            [(ngModel)]="modelHasta" required></my-date-picker>
+            <my-date-picker name="mydateHasta" [(ngModel)]="modelHasta" [options]="myDatePickerOptionsHasta"
+                             (dateChanged) ="onChangeHasta($event)"
+                             required></my-date-picker>
         </form>
     </div>
     <div class="col-md-2">
