--- a/src/app/layout/egreso-vehiculos/egreso-vehiculos.component.html
+++ b/src/app/layout/egreso-vehiculos/egreso-vehiculos.component.html
@@ -28,8 +28,8 @@
         </div>
 
         <div class="modal-footer custom-modal-footer">
-            <button type="button" class="btn btn-default custom-btn" data-dismiss="modal">Cancelar</button>
-            <button type="submit" (click)="onSubmitClicked(f)" class="btn btn-primary custom-btn">Aceptar</button>
+            <button type="button" class="btn btn-info custom-btn" data-dismiss="modal">Cancelar</button>
+            <button type="submit" (click)="onSubmitClicked(f)" class="btn btn-primary custom-btn">ACEPTAR</button>
         </div>
 
     </form>
