--- a/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.html
+++ b/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.html
@@ -97,7 +97,7 @@
 
 
             <div class="modal-footer custom-modal-footer">
-                <button type="button" class="btn custom-btn btn-default" (click)="onCleanClicked(f)">LIMPIAR</button>
+                <button type="button" class="btn custom-btn btn-info" (click)="onCleanClicked(f)">Limpiar</button>
                 <button type="submit" class="btn custom-btn btn-primary btn-success" (click)="onSubmitClicked(f)">GUARDAR</button>
             </div>
         </div>
