Cards en Reporte Ingresos

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
                       [icon]="'fa-money'" [count]="4" [label]="'nuevas reservas!'"
                       [data]="'VER RESERVAS'" ></app-stat>
         </a>
-        <a class="col-xs-6 col-lg-3 dashboard-item" [routerLink]="['/login']">
+        <a class="col-xs-6 col-lg-3 dashboard-item" [routerLink]="['/reportes/reporte-ingresos']">
             <app-stat [bgClass]="'card-info'" [icon]="'fa-bar-chart'"
                       [count]="21" [label]="'vehículos ingresados'"
                       [data]="'ESTADÍSTICAS'" ></app-stat>
