--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -64,8 +64,8 @@
                     <thead>
                         <tr>
                             <th style="text-align: center;">#</th>
-                            <th style="text-align: center;">Patente</th>
-                            <th style="text-align: center;">Hora ingreso</th>
+                            <th style="text-align: center; font-size: 0.9em;">Patente</th>
+                            <th style="text-align: center; font-size: 0.9em;">Hora ingreso</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -91,9 +91,9 @@
                     <thead>
                     <tr>
                         <th style="text-align: center;">#</th>
-                        <th style="text-align: center;">Patente</th>
-                        <th style="text-align: center;">Tiempo estadía</th>
-                        <th style="text-align: center;">Monto</th>
+                        <th style="text-align: center; font-size: 0.9em;">Patente</th>
+                        <th style="text-align: center; font-size: 0.9em;">Tiempo estadía</th>
+                        <th style="text-align: center; font-size: 0.9em;">Monto</th>
                     </tr>
                     </thead>
                     <tbody>
