--- a/src/app/layout/reporte-1/reporte-1.component.html
+++ b/src/app/layout/reporte-1/reporte-1.component.html
@@ -66,21 +66,21 @@
             <div class="card-block">
                 <div class="row">
                     <div class="tile tile-yellow col-md-5">
-                        <label>3</label>
+                        <label>{{promedioHora}}</label>
                         <p>Ingresos por hora</p>
                     </div>
                     <div class="tile tile-orange col-md-5">
-                        <label>16</label>
+                        <label>{{promedioDia}}</label>
                         <p>Ingresos por día</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="tile tile-lightbrown col-md-5">
-                        <label>186</label>
+                        <label>{{promedioSemana}}</label>
                         <p>Ingresos por semana</p>
                     </div>
                     <div class="tile tile-darkbrown col-md-5">
-                        <label>564</label>
+                        <label>{{promedioMes}}</label>
                         <p>Ingresos por mes</p>
                     </div>
                 </div>
