--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -68,7 +68,7 @@
                     </li>
                     <li>
                         <a [routerLink]="['/ingreso-egreso/notificar']" [routerLinkActive]="['router-link-active']">
-                            <i class="fa fa-bell"></i>&nbsp;{{ 'Emitir notificacion' | translate }}
+                            <i class="fa fa-bell"></i>&nbsp;{{ 'Emitir notificación' | translate }}
                         </a>
                     </li>
                     <li>
