--- a/src/app/layout/reporte-2/reporte-2.component.html
+++ b/src/app/layout/reporte-2/reporte-2.component.html
@@ -10,16 +10,16 @@
     <div class="col-md-3">
         <label class="control-label">Desde</label>
         <form class="form-inline mb-3">
-            <my-date-picker name="mydateDesde" [options]="myDatePickerOptions"
-                            (dateChanged) ="onChanceDesde()"
+            <my-date-picker name="mydateDesde" [options]="myDatePickerOptionsDesde"
+                            (dateChanged) ="onChangeDesde($event)"
                             [(ngModel)]="modelDesde" required></my-date-picker>
         </form>
     </div>
     <div class="col-md-3">
         <label class="control-label">Hasta</label>
         <form class="form-inline mb-3">
-            <my-date-picker name="mydateHasta" [options]="myDatePickerOptions"
-                            (dateChanged) ="onChanceHasta()"
+            <my-date-picker name="mydateHasta" [options]="myDatePickerOptionsHasta"
+                            (dateChanged) ="onChangeHasta($event)"
                             [(ngModel)]="modelHasta" required></my-date-picker>
         </form>
     </div>
@@ -48,7 +48,7 @@
     <div class="col col-md-12">
         <div class="card mb-3">
             <div class="card-header">
-                Line Chart
+                Vehículos egresados
             </div>
             <div class="card-block">
                 <canvas baseChart height="130" [datasets]="lineChartData"
