--- a/src/app/layout/reporte-2/reporte-2.component.html
+++ b/src/app/layout/reporte-2/reporte-2.component.html
@@ -1,7 +1,7 @@
 <app-page-header [heading]="'Reporte estadístico de egresos'" [icon]="'fa-line-chart'"></app-page-header>
 <div class="row">
     <div class="col-md-12">
-        <h2>Grafico estadistico de Egresos</h2>
+        <h2>Reporte estadístico de Egresos</h2>
         <hr>
         <br>
     </div>
@@ -45,11 +45,38 @@
     <strong>Datos incompletos.</strong> Por favor seleccione un rango de fechas.
 </ngb-alert>
 <div class="row">
-    <div class="col col-md-12">
+    <div class="col col-md-4">
         <div class="card mb-3">
             <div class="card-header">
-                Vehículos egresados
+                Información sobre Egresos
             </div>
+            <div class="card-block">
+                <div class="row">
+                    <div class="tile tile-darkbrown col-md-5">
+                        <label>{{promedioHora}}</label>
+                        <p>Egresos por hora</p>
+                    </div>
+                    <div class="tile tile-lightbrown col-md-5">
+                        <label>{{promedioDia}}</label>
+                        <p>Egresos por día</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="tile tile-orange col-md-5">
+                        <label>{{promedioTiempo}} hs</label>
+                        <p>Tiempo promedio</p>
+                    </div>
+                    <div class="tile tile-yellow col-md-5">
+                        <label>${{promedioCosto}}</label>
+                        <p>Costo promedio</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col col-md-8">
+        <div class="card mb-3">
+            <div class="card-header">Vehículos egresados</div>
             <div class="card-block">
                 <canvas baseChart height="130" [datasets]="lineChartData"
                         [labels]="lineChartLabels" [options]="lineChartOptions"
