Agregados componentes: Historial Reservas & Reservas Activas Ruteo y Modules

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
                       [icon]="'fa-car'" [icon2]="'fa-sign-out'"
                       [data]="'SALIDA VEHÍCULO'"></app-stat>
         </a>
-        <a class="col-xs-6 col-lg-3 dashboard-item" [routerLink]="['/login']">
+        <a class="col-xs-6 col-lg-3 dashboard-item" [routerLink]="['/reservas/activas']">
             <app-stat [bgClass]="'card-primary'"
                       [icon]="'fa-money'" [count]="4" [label]="'nuevas reservas!'"
                       [data]="'VER RESERVAS'" ></app-stat>
