--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,38 +4,45 @@
 
         <div class="nested-menu">
             <a class="list-group-item" (click)="addExpandClass('pages')">
-                <span><i class="fa fa-plus"></i>&nbsp; {{ 'A BORRAR' }}</span>
+                <span><i class="fa fa-plus"></i>&nbsp;
+                    {{ 'A BORRAR' }}</span>
             </a>
             <li class="nested" [class.expand]="showMenu === 'pages'">
                 <ul class="submenu">
                     <li>
                         <a routerLink="/dashboard" [routerLinkActive]="['router-link-active']" class="list-group-item">
-                            <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ 'dashboard' | translate }}
+                            <i class="fa fa-fw fa-dashboard"></i>&nbsp;
+                            {{ 'dashboard' | translate }}
                         </a>
                     </li>
                     <li>
                         <a [routerLink]="['/charts']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-                            <i class="fa fa-fw fa-bar-chart-o"></i>&nbsp;{{ 'charts' | translate }}
+                            <i class="fa fa-fw fa-bar-chart-o"></i>&nbsp;
+                            {{ 'charts' | translate }}
                         </a>
                     </li>
                     <li>
                         <a [routerLink]="['/tables']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-                            <i class="fa fa-fw fa-table"></i>&nbsp;{{ 'tables' | translate }}
+                            <i class="fa fa-fw fa-table"></i>&nbsp;
+                            {{ 'tables' | translate }}
                         </a>
                     </li>
                     <li>
                         <a [routerLink]="['/forms']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-                            <i class="fa fa-fw fa-edit"></i>&nbsp;{{ 'forms' | translate }}
+                            <i class="fa fa-fw fa-edit"></i>&nbsp;
+                            {{ 'forms' | translate }}
                         </a>
                     </li>
                     <li>
                         <a [routerLink]="['/bs-element']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-                            <i class="fa fa-fw fa-desktop"></i>&nbsp;{{ 'boostrapElement' | translate }}
+                            <i class="fa fa-fw fa-desktop"></i>&nbsp;
+                            {{ 'boostrapElement' | translate }}
                         </a>
                     </li>
                     <li>
                         <a [routerLink]="['/grid']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-                            <i class="fa fa-fw fa-wrench"></i>&nbsp;{{ 'boostrapGrid' | translate }}
+                            <i class="fa fa-fw fa-wrench"></i>&nbsp;
+                            {{ 'boostrapGrid' | translate }}
                         </a>
                     </li>
                 </ul>
@@ -48,32 +55,38 @@
 
     <ul class="list-group">
         <a [routerLink]="['/dashboard']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-th-list"></i>&nbsp;{{ 'Dashboard' | translate }}
+            <i class="fa fa-th-list"></i>&nbsp;
+            {{ 'Dashboard' | translate }}
         </a>
         <div class="nested-menu">
             <a class="list-group-item" (click)="addExpandClass('ingresos')">
-                <span><i class="fa fa-plus"></i>&nbsp; {{ 'Ingresos/Egresos' | translate }}</span>
+                <span><i class="fa fa-plus"></i>&nbsp;
+                    {{ 'Ingresos/Egresos' | translate }}</span>
             </a>
             <li class="nested" [class.expand]="showMenu === 'ingresos'">
                 <ul class="submenu">
                     <li>
                         <a [routerLink]="['/ingreso-egreso/ingreso']" [routerLinkActive]="['router-link-active']" >
-                            <i class="fa fa-car"></i> {{ 'Ingreso vehículos' | translate }}
+                            <i class="fa fa-car"></i>
+                            {{ 'Ingreso vehículos' | translate }}
                         </a>
                     </li>
                     <li>
                         <a [routerLink]="['/ingreso-egreso/egreso']" [routerLinkActive]="['router-link-active']">
-                            <i class="fa fa-sign-out"></i>&nbsp;{{ 'Egreso vehículos' | translate }}
+                            <i class="fa fa-sign-out"></i>&nbsp;
+                            {{ 'Egreso vehículos' | translate }}
                         </a>
                     </li>
                     <li>
                         <a [routerLink]="['/ingreso-egreso/notificar']" [routerLinkActive]="['router-link-active']">
-                            <i class="fa fa-bell"></i>&nbsp;{{ 'Emitir notificación' | translate }}
+                            <i class="fa fa-bell"></i>&nbsp;
+                            {{ 'Emitir notificación' | translate }}
                         </a>
                     </li>
                     <li>
                         <a [routerLink]="['/ingreso-egreso/historial']" [routerLinkActive]="['router-link-active']">
-                            <i class="fa fa-bars"></i>&nbsp;{{ 'Historial' | translate }}
+                            <i class="fa fa-bars"></i>&nbsp;
+                            {{ 'Historial' | translate }}
                         </a>
                     </li>
                 </ul>
@@ -81,18 +94,21 @@
         </div>
         <div class="nested-menu">
             <a class="list-group-item" (click)="addExpandClass('reservas')">
-                <span><i class="fa fa-plus"></i>&nbsp; {{ 'Reservas' | translate }}</span>
+                <span><i class="fa fa-plus"></i>&nbsp;
+                    {{ 'Reservas' | translate }}</span>
             </a>
             <li class="nested" [class.expand]="showMenu === 'reservas'">
                 <ul class="submenu">
                     <li>
                         <a [routerLink]="['/reservas/activas']" [routerLinkActive]="['router-link-active']">
-                            <i class="fa fa-money"></i>&nbsp;{{ 'Reservas activas' | translate }}
+                            <i class="fa fa-money"></i>&nbsp;
+                            {{ 'Reservas activas' | translate }}
                         </a>
                     </li>
                     <li>
                         <a [routerLink]="['/reservas/historial']" [routerLinkActive]="['router-link-active']">
-                            <i class="fa fa-bars"></i>&nbsp;{{ 'Historial' | translate }}
+                            <i class="fa fa-bars"></i>&nbsp;
+                            {{ 'Historial' | translate }}
                         </a>
                     </li>
                 </ul>
@@ -100,31 +116,43 @@
         </div>
         <div class="nested-menu">
             <a class="list-group-item" (click)="addExpandClass('estadisticas')">
-                <span><i class="fa fa-plus"></i>&nbsp; {{ 'Estadísticas' | translate }}</span>
+                <span><i class="fa fa-plus"></i>&nbsp;
+                    {{ 'Estadísticas' | translate }}</span>
             </a>
             <li class="nested" [class.expand]="showMenu === 'estadisticas'">
                 <ul class="submenu">
                     <li>
                         <a [routerLink]="['/reportes/reporte-ingresos']" [routerLinkActive]="['router-link-active']">
-                            <i class="fa fa-pie-chart"></i>&nbsp;{{ 'Reporte: ingresos' | translate }}
+                            <i class="fa fa-pie-chart"></i>&nbsp;
+                            {{ 'Reporte: ingresos' | translate }}
                         </a>
                     </li>
                     <li>
                         <a [routerLink]="['/reportes/reporte-egresos']" [routerLinkActive]="['router-link-active']">
-                            <i class="fa fa-line-chart"></i>&nbsp;{{ 'Reporte: egresos' | translate }}
+                            <i class="fa fa-line-chart"></i>&nbsp;
+                            {{ 'Reporte: egresos' | translate }}
+                        </a>
+                    </li>
+                    <li>
+                        <a [routerLink]="['/reportes/reporte-egresos']" [routerLinkActive]="['router-link-active']">
+                            <i class="fa fa-address-card"></i>
+                            Solicitar reporte personalizado
                         </a>
                     </li>
                 </ul>
             </li>
         </div>
         <a [routerLink]="['/social']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-comments"></i>&nbsp;{{ 'Social' | translate }}
+            <i class="fa fa-comments"></i>&nbsp;
+            {{ 'Social' | translate }}
         </a>
         <a [routerLink]="['/settings']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-cogs"></i>&nbsp;{{ 'Ajustes' | translate }}
+            <i class="fa fa-cogs"></i>&nbsp;
+            {{ 'Ajustes' | translate }}
         </a>
         <a [routerLink]="['/admin-panel']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-sliders"></i>&nbsp;{{ 'Admin Panel' | translate }}
+            <i class="fa fa-sliders"></i>&nbsp;
+            {{ 'Admin Panel' | translate }}
         </a>
     </ul>
 </nav>
