--- a/src/app/layout/reporte-1/reporte-1.component.html
+++ b/src/app/layout/reporte-1/reporte-1.component.html
@@ -1,87 +1,90 @@
 <app-page-header [heading]="'Reporte estadístico de ingresos'" [icon]="'fa-pie-chart'"></app-page-header>
-<div class="row">
-    <div class="col-md-12">
-        <h2>Reporte estadístico de Ingresos</h2>
-        <hr>
+
+<div [@routerTransition]>
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Reporte estadístico de Ingresos</h2>
+            <hr>
+            <br>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <label class="control-label">Desde</label>
+            <form class="form-inline mb-3">
+                <my-date-picker name="mydateDesde" [(ngModel)]="modelDesde" [options]="myDatePickerOptionsDesde"
+                                 (dateChanged) ="onChangeDesde($event)" required></my-date-picker>
+            </form>
+        </div>
+        <div class="col-md-3">
+            <label class="control-label">Hasta</label>
+            <form class="form-inline mb-3">
+                <my-date-picker name="mydateHasta" [(ngModel)]="modelHasta" [options]="myDatePickerOptionsHasta"
+                                 (dateChanged) ="onChangeHasta($event)"
+                                 required></my-date-picker>
+            </form>
+        </div>
+        <div class="col-md-2">
+            <label class="control-label">Intervalo</label>
+            <div class="form-group">
+                <select [(ngModel)]="modelIntervalo" class="form-control" (click)="onSelectClick($event.target.value)">
+                    <option [disabled]="disableHoras" class="active">Horas</option>
+                    <option [disabled]="disableDias" >Dias</option>
+                    <option [disabled]="disableSemanas" >Semanas</option>
+                    <option [disabled]="disableMes" >Meses</option>
+                    <option [disabled]="disableAnos" >Años</option>
+                </select>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <button (click)="onGenerateClick()" class="btn btn-success alineado" >Generar Grafico</button>
+        </div>
+        <br>
         <br>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-3">
-        <label class="control-label">Desde</label>
-        <form class="form-inline mb-3">
-            <my-date-picker name="mydateDesde" [(ngModel)]="modelDesde" [options]="myDatePickerOptionsDesde"
-                             (dateChanged) ="onChangeDesde($event)" required></my-date-picker>
-        </form>
-    </div>
-    <div class="col-md-3">
-        <label class="control-label">Hasta</label>
-        <form class="form-inline mb-3">
-            <my-date-picker name="mydateHasta" [(ngModel)]="modelHasta" [options]="myDatePickerOptionsHasta"
-                             (dateChanged) ="onChangeHasta($event)"
-                             required></my-date-picker>
-        </form>
-    </div>
-    <div class="col-md-2">
-        <label class="control-label">Intervalo</label>
-        <div class="form-group">
-            <select [(ngModel)]="modelIntervalo" class="form-control" (click)="onSelectClick($event.target.value)">
-                <option [disabled]="disableHoras" class="active">Horas</option>
-                <option [disabled]="disableDias" >Dias</option>
-                <option [disabled]="disableSemanas" >Semanas</option>
-                <option [disabled]="disableMes" >Meses</option>
-                <option [disabled]="disableAnos" >Años</option>
-            </select>
-        </div>
-    </div>
-    <div class="col-md-2">
-        <button (click)="onGenerateClick()" class="btn btn-success alineado" >Generar Grafico</button>
-    </div>
-    <br>
-    <br>
-</div>
-<ngb-alert class="alert-warning" (close)="showAlert = false" *ngIf="showAlert" >
-    <strong>Datos incompletos.</strong> Por favor seleccione un rango de fechas.
-</ngb-alert>
-<div class="row">
-    <div class="col col-md-8">
-        <div class="card mb-3">
-            <div class="card-header">Vehículos ingresados</div>
-            <div class="card-block">
-                <canvas baseChart height="130" [datasets]="lineChartData"
-                        [labels]="lineChartLabels" [options]="lineChartOptions"
-                        [colors]="lineChartColors" [legend]="lineChartLegend"
-                        [chartType]="lineChartType"
-                        (chartHover)="chartHovered($event)"
-                        (chartClick)="chartClicked($event)">
-                </canvas>
-            </div>
-        </div>
-    </div>
-    <div class="col col-md-4">
-        <div class="card mb-3">
-            <div class="card-header">
-                Ingresos promedio de vehículos
-            </div>
-            <div class="card-block">
-                <div class="row">
-                    <div class="tile tile-yellow col-md-5">
-                        <label>{{promedioHora}}</label>
-                        <p>Ingresos por hora</p>
-                    </div>
-                    <div class="tile tile-orange col-md-5">
-                        <label>{{promedioDia}}</label>
-                        <p>Ingresos por día</p>
-                    </div>
+    <ngb-alert class="alert-warning" (close)="showAlert = false" *ngIf="showAlert" >
+        <strong>Datos incompletos.</strong> Por favor seleccione un rango de fechas.
+    </ngb-alert>
+    <div class="row">
+        <div class="col col-md-8">
+            <div class="card mb-3">
+                <div class="card-header">Vehículos ingresados</div>
+                <div class="card-block">
+                    <canvas baseChart height="130" [datasets]="lineChartData"
+                            [labels]="lineChartLabels" [options]="lineChartOptions"
+                            [colors]="lineChartColors" [legend]="lineChartLegend"
+                            [chartType]="lineChartType"
+                            (chartHover)="chartHovered($event)"
+                            (chartClick)="chartClicked($event)">
+                    </canvas>
                 </div>
-                <div class="row">
-                    <div class="tile tile-lightbrown col-md-5">
-                        <label>{{promedioSemana}}</label>
-                        <p>Ingresos por semana</p>
+            </div>
+        </div>
+        <div class="col col-md-4">
+            <div class="card mb-3">
+                <div class="card-header">
+                    Ingresos promedio de vehículos
+                </div>
+                <div class="card-block">
+                    <div class="row">
+                        <div class="tile tile-yellow col-md-5">
+                            <label>{{promedioHora}}</label>
+                            <p>Ingresos por hora</p>
+                        </div>
+                        <div class="tile tile-orange col-md-5">
+                            <label>{{promedioDia}}</label>
+                            <p>Ingresos por día</p>
+                        </div>
                     </div>
-                    <div class="tile tile-darkbrown col-md-5">
-                        <label>{{promedioMes}}</label>
-                        <p>Ingresos por mes</p>
+                    <div class="row">
+                        <div class="tile tile-lightbrown col-md-5">
+                            <label>{{promedioSemana}}</label>
+                            <p>Ingresos por semana</p>
+                        </div>
+                        <div class="tile tile-darkbrown col-md-5">
+                            <label>{{promedioMes}}</label>
+                            <p>Ingresos por mes</p>
+                        </div>
                     </div>
                 </div>
             </div>
