Fixes - reporte 2 (por hora) & labels

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
         </a>
         <a class="col-xs-6 col-lg-3 dashboard-item" [routerLink]="['/reportes/reporte-ingresos']">
             <app-stat [bgClass]="'card-info'" [icon]="'fa-bar-chart'"
-                      [count]="21" [label]="'vehículos ingresados'"
+                      [count]="ingresadosActivos" [label]="'vehículos ingresados'"
                       [data]="'ESTADÍSTICAS'" ></app-stat>
         </a>
     </div>
